# esp-pulser

./: Cargo.toml  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust_ci.yml
docs/: README.md
scripts/: flash.sh  gen_esp32part.py
src/: circ.rs  drv2605.rs  filters.rs  lib.rs  linreg.rs  main.rs  ota.rs  pulse_sensor.rs  signal.rs
