[package]
name = "esp-pulser"
version = "0.6.0"
authors = ["krokosik <krokosik@pm.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-pulser"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50.0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-graphics = "0.8.1"
embedded-svc = "0.28.1"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
anyhow = "1.0.95"
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
mime = "0.3.17"
http = "1.2.0"
max3010x = { git = "https://github.com/krokosik/max3010x-rs.git", version = "0.2.0" }
embedded-hal-bus = { features = ["std"], version="0.2.0" }
embedded-hal = "1.0.0"
heapless = "0.8.0"
drv2605 = { git = "https://github.com/krokosik/drv2605.git", version = "0.2.0" }

[build-dependencies]
embuild = "0.33.0"
